--- a/templates/report.html
+++ b/templates/report.html
@@ -46,7 +46,7 @@
 
         {% if csv_report_name %}
         <div style="text-align: center; margin-bottom: 20px;">
-            <a href="{{ url_for('view_report', report_name=csv_report_name) }}" class="download-btn" download>Download Report as CSV</a>
+            <a href="/reports/{{ csv_report_name }}" class="download-btn" download>Download Report as CSV</a>
         </div>
         {% endif %}
 
