--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,7 @@
         <div>
             <a href="{{ url_for('index') }}">Scanner</a>
             <a href="{{ url_for('history') }}">History</a>
+            <a href="{{ url_for('about') }}">About</a>
         </div>
     </div>
     <div class="container">
